--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="container">
-        <canvas id="root" class="canvas"></canvas>
+        <canvas id="root" ></canvas>
     </div>
     <script src="main.ts"></script>
 </body>
